--- a/Week_8_Ethics_Social_Justice.ipynb
+++ b/Week_8_Ethics_Social_Justice.ipynb
@@ -33,8 +33,7 @@
       "toc_window_display": false
     },
     "colab": {
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     }
   },
   "cells": [
@@ -57,29 +56,175 @@
         "id": "nviFxr3-rZXj"
       },
       "source": [
-        "## Part 1: Identify Real-life, Current Issues\n",
+        "## Part 1: Evaluate Ethics Statements\n",
         "\n",
-        "Find a news article discussing some recent, on-going, or near-future social justice issue or AI ethics issue. Some good sources for tech news include: [Wired](https://www.wired.com/story/china-personal-data-law-pipl/), [Engadget](https://www.engadget.com/european-parliament-facial-recognition-ban-ai-bias-165833826.html), [Gizmodo](https://gizmodo.com/35-secret-code-words-facebook-uses-to-talk-about-its-us-1847988690), [TechCrunch](https://techcrunch.com/2021/11/05/apple-and-amazon-ml-ai-leads-to-speak-on-accessibility-at-sight-tech-global-2021/), and [Vox](https://www.vox.com/recode/22761598/facebook-facial-recognition-meta). \n",
+        "### Question 1.1 Select research papers [5pt]\n",
+        "Select at least 5 papers from a recent machine learning conference. At least 3 must come from ACL, but you may choose the remaining papers from different conferences from this list if you prefer: NeurIPS, ICML, CVPR, ICCV, EMNLP, NAACL, AISTATS.\n",
         "\n",
-        "**Provide a link to the news article. Summarize the issue from the article in 1-3 sentences, making sure you capture: who is (or could be) harmed? how are they (or could they be) harmed?**\n",
+        "To search, try the phrase \"`[CONFERENCE ABBREVIATION] 2024 proceedings`\" or \"`[CONFERENCE ABBREVIATION] 2024 accepted papers`\", for example \"`ACL 2024 proceedings`\".\n",
         "\n",
-        "*Your summary is worth two points.*\n",
+        "[Association of Computational Linguistics (ACL)](https://2024.aclweb.org/program/main_conference_papers/)   \n",
+        "\n",
+        "List and provide links to the papers below. If the pdf is not directly linked from the conference website, searching the title on Google will find a link either on Arxiv or a digital library (ACM, IEEE, etc.)\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[*Write your answers here*]\n",
+        "\n",
+        "1.\n",
+        "2.\n",
+        "3.\n",
+        "4.\n",
+        "5."
+      ],
+      "metadata": {
+        "id": "-3Fal-yJUipT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Question 1.2 Identify ethics discussion [10pt]\n",
+        "\n",
+        "Skim the paper and identify whether the authors discuss ethical implications of their work. Copy any relevant text, then summarize the key aspects they consider.\n"
+      ],
+      "metadata": {
+        "id": "91VIQXJwUp-O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Paper 1**\n",
+        "\n",
+        "*Original Text*:\n",
+        "\n",
+        "*Your Summary*:"
+      ],
+      "metadata": {
+        "id": "kQQ0oF5LXRbE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Paper 2**\n",
+        "\n",
+        "*Original Text*:\n",
+        "\n",
+        "*Your Summary*:"
+      ],
+      "metadata": {
+        "id": "yfca1fxlXhjM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Paper 3**\n",
+        "\n",
+        "*Original Text*:\n",
+        "\n",
+        "*Your Summary*:"
+      ],
+      "metadata": {
+        "id": "hZZNIoKdXh1d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Paper 4**\n",
+        "\n",
+        "*Original Text*:\n",
+        "\n",
+        "*Your Summary*:"
+      ],
+      "metadata": {
+        "id": "W-4C9bWkXh8v"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Paper 5**\n",
+        "\n",
+        "*Original Text*:\n",
+        "\n",
+        "*Your Summary*:"
+      ],
+      "metadata": {
+        "id": "UuznzYErXiTE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Question 1.3 Worst case scenario [5pt]\n",
+        "\n",
+        "Select one of the articles. Write a brief version of a possible worst-case scenario of the new model/dataset/other contribution of the paper being misused."
+      ],
+      "metadata": {
+        "id": "BQQfm9oYYQYT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Write your response here*"
+      ],
+      "metadata": {
+        "id": "7CKXe909adrA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Question 1.4 Evaluate ethics discussion [5pt]\n",
+        "\n",
+        "Overall, do you find the evaluation the authors provide convincing? Are there other ethical issues that they could have included?\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Bevp8QsjUnUw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "*Write your response here*"
+      ],
+      "metadata": {
+        "id": "mjirWrCHYCca"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "## Part 2: Brainstorm Solutions\n",
         "\n",
-        "**Sketch and describe two alternative systems that could help address the issue from the news article you selected. Each system should use a different approach to tackle the same issue.**\n",
+        "**Either for the worst-case scenario you described in Question 1.3 or another negative impact of an AI system, sketch and describe two solutions that could help address the issue from the you selected. Each design should use a different approach to tackle the same issue.**\n",
         "\n",
-        "*Each sketch is worth four points.*\n",
+        "*Each sketch is worth five points.*\n",
         "\n",
-        "To receive full credit: \n",
+        "To receive full credit:\n",
         "\n",
         "1. Indicate the target audience or target user for your system.\n",
-        "2. Clearly state your design goal(s). \n",
+        "2. Clearly state your design goal(s).\n",
         "3. Indicate how your design addresses the ethics or social justice issue you selected (and relates to the news article you selected).\n",
         "4. Label your sketch.\n",
         "\n",
         "*If you are having trouble thinking of a solution, you could try using the four roles for computing laid out in Abebe et al.*\n"
-      ]
+      ],
+      "metadata": {
+        "id": "ev9I6CpPYGa7"
+      }
     }
   ]
 }
